--- a/eigrp.qmd
+++ b/eigrp.qmd
@@ -120,10 +120,10 @@ router eigrp MULTI-AF
 
 ##### Load balancing
 
-- Equal cost load balancing enabled by default (max 4 paths by default)
-  - alter max number of equal cost/metric routes using `maximum-paths [x]`
+-   Equal cost load balancing enabled by default (max 4 paths by default)
+    -   alter max number of equal cost/metric routes using `maximum-paths [x]`
 -   Variance used to enable load balancing between unequal paths, installs feasible successor routes and puts them into the routing table
-  - variance is a multiplier of Feasible Distance. Verify (and show traffic share) with `show ip route [network]`
+-   variance is a multiplier of Feasible Distance. Verify (and show traffic share) with `show ip route [network]`
 
 ##### Metrics
 
@@ -187,7 +187,10 @@ router eigrp [NAME]
 
 ## Useful Show Commands + Info
 
-`show ip route EIGRP` - shows EIGRP routes installed into the RIB `show ip eigrp interfaces` - shows active EIGRP interfaces `show ip eigrp interfaces detail` - shows detailed interface info (hold time, split-horizon enabled etc. `show ip eigrp topology all-links` - shows all additional paths to network (failed Feasibility Condition) `show ip protocols` - displays EIGRP process ID, ASN, K values, RID, Neighbours, AD + Passive Ints
-
+-   `show ip route EIGRP` - shows EIGRP routes installed into the RIB
+-   `show ip eigrp interfaces` - shows active EIGRP interfaces
+-   `show ip eigrp interfaces detail` - shows detailed interface info (hold time, split-horizon enabled etc.
+-   `show ip eigrp topology all-links` - shows all additional paths to network (failed Feasibility Condition)
+-   `show ip protocols` - displays EIGRP process ID, ASN, K values, RID, Neighbours, AD + Passive Ints
 -   Stuck in Active - router sends query about network, doesn't hear back and thinks it's neighbor has died. Default timer 3 mins, router waits half then sends SIA query to neighbours
 -   EIGRP routes with same `router-id` will form an adjacency but won't accept routes from one another. Investigate using `debug ip eigrp`
