--- a/ospf.qmd
+++ b/ospf.qmd
@@ -50,6 +50,8 @@ code-block-bg: dark
         -   Change ref bandwith with `auto-cost reference bandwidth [value]` big kev recommends 2TB!
         -   Should match across topology but won't stop neighbourships forming.
 
+-   Troubleshooting - **TAN MAT** (**T**imers, **A**rea, **N**etwork Add, **M**TU, **A**uth, **T**ype)
+
 ------------------------------------------------------------------------
 
 # Features
