--- a/ospf.qmd
+++ b/ospf.qmd
@@ -96,10 +96,10 @@ code-block-bg: dark
 -   configured with:
 
 ```         
-R1(config)#router ospf 1\
+R1(config)#router ospf 1
 R1(config-router)#area 1 virtual-link 192.168.23.2     (IP of interface in the area you want to form an adjacency with)
 
-R2(config)#router ospf 1\
+R2(config)#router ospf 1
 R2(config-router)#area 1 virtual-link 1.1.1.1      (IP of interface in the area you want to form an adjacency with)
 ```
 
@@ -129,5 +129,4 @@ OR
  
 int g0/2
 ospf 1 area 0
-
 ```
