--- a/ospf.qmd
+++ b/ospf.qmd
@@ -92,6 +92,11 @@ area [area id] authentication message-digest                - enables MD5
   int g0/1
     ip ospf authentication message-digest                       - Sets MD5 auth for that interface
     ip ospf message-digest-key [key#] md5 [password]            - Creates hash using key + password 
+    
+  
+OSPFv3
+int g0/0
+  ospfv3 authentication ipsec spi [value] sha1 0 [40char key]
 
 
 
@@ -120,6 +125,20 @@ links shows "DNA" in DB - Do Not Age - reduced traffic flowing over link - no he
 
 ## Summerisation
 
+-   Summerisation only possible at ABR + ASBR
+
+-   Inter-Area Summerisation, reduces Type 3 LSAs, summerised metric = lowest metric of networks by default
+
+    -   configured with `area [area-id] range [network + mask] cost [metric]` under OSPF process.
+
+-   can use `not-advertise` to prevent prefixes being advertised
+
+-   External router summerisation at ASBR (LSA 5)
+
+    -   configured with `summary-address [network + mask]` under OSPF process.
+
+-   "Discard Route" installed with destination Null0 - matches summary address to prevent loops (AD set to 110 for internal, 254 for external)
+
 ## Path Selection
 
 Intra Area preferred
@@ -133,11 +152,16 @@ Intra AREA
 # Useful commands
 
 -   `show ip protocol` - shows general info on active routing protocols
--   `show ip ospf` -
--   `show ip ospf interface [brief]` - shows detailed info on OSFP enabled interfaces
+-   `show ip ospf` - shows detailed info on OSPF protocol, timers, metric etc.
+-   `show ip ospf interface [brief]` - shows detailed/brief info on OSFP enabled interfaces, hold/wait timer etc.
 -   `show ip ospf database` - shows the OSPF database for this area
 -   `show ip ospf neighbour [detail]` - shows list of OSPF neighbours plus states
 -   `show ip ospf database router self-originate`
+-   `debug ip ospf adj` - debugs OSPF adjacency
+-   `debug ip ospf packet` - debugs all OSPF packets
+
+-   `show ip ospf database router self-originate` - Useful to see routes advertised by local device
+
 -   
 
 ------------------------------------------------------------------------
