--- a/ospf.qmd
+++ b/ospf.qmd
@@ -183,12 +183,26 @@ router ospf 2
 -   Configured using `distribute-list prefix [name] [in/out] [interface]`
 
     ``` default
-    access-list 1  deny 28.0.0.0 0.255.255.255
+    ACL
+    access-list 1 deny 28.0.0.0 0.255.255.255
     access-list 1 permit any
     !
     router ospf 1
       distribute-list 1 in 
     ```
+
+-   Example with Prefix List
+
+    ``` default
+    PREFIX-LIST
+    ip prefix-list BLOCK_GERMANY deny 10.49.1.0/24 le32
+    ip prefix-list BLOCK_GERMANY permit 0.0.0.0/0 le 32
+    !
+    router ospf 1
+      distribute-list prefix BLOCK_GERMANY in
+    ```
+
+-   
 
 -   Can match on many values with route-maps, such as interface, ip address, ip next-hop, ip route-source, metric, route-type and tag
 
