--- a/ospf.qmd
+++ b/ospf.qmd
@@ -117,23 +117,16 @@ ip ospf authentication key-chain OSPF_KEY
 
 ## Virtual Links
 
--   Allows adjacency with non directly connected neighbour.
--   configured with:
-
-``` default
-R1(config)#router ospf 1
-R1(config-router)#area 1 virtual-link 192.168.23.2     (IP of int in area you want to form adjacency with)
-
-R2(config)#router ospf 1
-R2(config-router)#area 1 virtual-link 1.1.1.1      (IP of int in area you want to form adjacency with)
-```
-
-links shows "DNA" in DB - Do Not Age - reduced traffic flowing over link - no hello or refresh messages.
+-   Allows adjacency with non directly connected neighbour between one ABR + multi Area Router
+-   Configured with `area [transit area#] virtual link [neighbour RID]`
+-   RID used rather than Router int IP.
+-   Links shows as "DNA" in OSPF DB - 'Do Not Age' - reduced traffic flowing over link - no hello or refresh messages.
+-   At least one device must be in Area 0, can't be formed in any stubby areas.
 
 ## Summarisation
 
 -   Summarisation only possible at ABR + ASBR
--   Inter-Area Summrrisation, reduces Type 3 LSAs, summarised metric = lowest metric of networks by default
+-   Inter-Area Summarisation, reduces Type 3 LSAs, summarised metric = lowest metric of networks by default
     -   configured with `area [area-id] range [network + mask] cost [metric]` under OSPF process.
 -   can use `not-advertise` to prevent prefixes being advertised
 -   External router summarisation ndefined at ASBR
@@ -150,11 +143,8 @@ links shows "DNA" in DB - Do Not Age - reduced traffic flowing over link - no he
 ## Totally Stubby Area
 
 -   Blocks LSA Types 3 (Inter-Area), 4 (ASBR) and 5 (External)
-
 -   Cisco Propriety
-
 -   configured with `area [area #] stub no-summary` on ABR, other routers in area as above.
-
 -   Default route tuning: `area [area #] default-cost [metric]`
 
 ## NSSA
@@ -187,7 +177,7 @@ router ospf 2
 
 -   Configured using `distribute-list prefix [name] [in/out] [interface]`
 
-``` default
+```` default
  ACL
 access-list 1 deny 28.0.0.0 0.255.255.255
 access-list 1 permit any
@@ -205,7 +195,7 @@ ip prefix-list BLOCK_GERMANY permit 0.0.0.0/0 le 32
 !
 router ospf 1
 distribute-list prefix BLOCK_GERMANY in
-```
+````
 
 -   
 
@@ -247,7 +237,7 @@ Intra AREA
 -   `debug ip ospf adj` - debugs OSPF adjacency
 -   `debug ip ospf packet` - debugs all OSPF packets
 -   `show ip ospf database router self-originate` - Useful to see routes advertised by local device
--   
+-   `show ip ospf virtual-links`
 
 ------------------------------------------------------------------------
 
