--- a/bgp.qmd
+++ b/bgp.qmd
@@ -7,51 +7,29 @@ code-block-bg: dark
 # General Info
 
 -   Used **TCP 179** **to** establish session. TTL=1
-
 -   Use of TCP allows for adjacencies with non directly connected neighbour.
-
--   Multi-hop session require underlying routes from RIB (dynamic or static)
-
-    Must explicitly configure neighbour relationships
-
+-   Multi-hop session require underlying routes from RIB (dynamic or static) Must explicitly configure neighbour relationships
     -   TCP session established
     -   Advertises Address Prefix & Length (called Network Layer Reachability Information - NLRI)
-
 -   Hold Time: **180s**, Keepalive: **60s** (1/3 ratio)
-
     -   Adjust under bgp process with `timers bgp 5 20` - keepalive 5 / hold 20
-
 -   Uses Address families to
-
 -   AFI/SAFI - Address & Subsequent Address Family Identifiers (ipv4 unicast etc).
-
 -   Modern BGP sets DF bit (do not fragment) to prevent fragmentation.
-
 -   NLRI - Network Layer Reachability Information = Prefix Length + Prefix
-
 -   BGP RID - If not manually configured (which is recommended)
-
     -   Highest IP on Loopback int that's up
     -   Highest IP on any other Interface thats up
-
 -   BGP Synchronisation - disabled on modern devices by default
-
     -   RULE: Only advertise routes learned from iBGP peer to an eBGP peer when there is an exact match of that route learned from an IGP in the routing table.
-
 -   **iBGP**
-
     -   TTL = 255
-
 -   **eBGP**
-
     -   TTL = 1, this can be increased using `neighbor [ip] ebgp-multihop [1-255]`
     -   Can also use `neighbor [ip] ttl-security hops [hop-count]`
     -   Difference = `eBGP-multihop` = sets *maximum range* allowed, `TTL-security` sets *exact range*
-
 -   If peering with different update source but not through additional hops, can use `neighbor <ip> disable-connected-check`
-
 -   Does change next-hop by default
-
 -   It's recommended to update source to a loopback for resiliency `neighbor [ip] update-source [loopback]`
 
 # Features
