--- a/bgp.qmd
+++ b/bgp.qmd
@@ -7,8 +7,9 @@ code-block-bg: dark
 # General Info
 
 -   Used **TCP 179** **to** establish session. TTL=1
+-   Admin Distance: iBGP AD = **200**, eBGP AD = **20**
 -   Use of TCP allows for adjacencies with non directly connected neighbour.
--   Multi-hop session require underlying routes from RIB (dynamic or static) Must explicitly configure neighbour relationships
+-   Multi-hop session require underlying routes................... from RIB (dynamic or static) Must explicitly configure neighbour relationships
     -   TCP session established
     -   Advertises Address Prefix & Length (called Network Layer Reachability Information - NLRI)
 -   Hold Time: **180s**, Keepalive: **60s** (1/3 ratio)
@@ -24,6 +25,8 @@ code-block-bg: dark
     -   RULE: Only advertise routes learned from iBGP peer to an eBGP peer when there is an exact match of that route learned from an IGP in the routing table.
 -   **iBGP**
     -   TTL = 255
+    -   Uses split horizon for loop prevention, requires full mesh of BGP routers inside single AS
+        -   A route learned from 1 iBGP won't be forwarded to another iBGP peer by default.
 -   **eBGP**
     -   TTL = 1, this can be increased using `neighbor [ip] ebgp-multihop [1-255]`
     -   Can also use `neighbor [ip] ttl-security hops [hop-count]`
@@ -53,6 +56,12 @@ code-block-bg: dark
 
 -   Allows route learned from iBGP neighbour can be reflected to neighbours in same ASN
 -   Configured using `neighbour [ip] route-reflector-client` -
+
+## Summarisation
+
+-   Configured on AS Edge Routers.
+-   configured with `aggregate-address 10.0.0.0 255.0.0.0 [summary-only]`
+    -   use of `summary-only` advertises only summary route, not the aggregated networks
 
 ------------------------------------------------------------------------
 
