--- a/bgp.qmd
+++ b/bgp.qmd
@@ -78,6 +78,13 @@ code-block-bg: dark
 -   AS_Path, MED +communities aren't included in new prefix info
 -   Can include AS_Path info using `as-set`
 
+## **BGP regexp**
+
+-   Can be used to search for specifc AS-PATHs in table - for example: `show ip bgp regexp ^$`
+-   Above will show prefixes originated locally with the AS. Cheat sheet [here.](http://gponsolution.com/bgp-regular-expressions-cheat-sheet.html)
+-   Can be used to filter with ACLs with ip as-path: `ip as-path access-list 1 permit _54$`
+-   Then use `match as-path` under a route-map to apply modifications
+
 ------------------------------------------------------------------------
 
 # BGP Configuration
