--- a/bgp.qmd
+++ b/bgp.qmd
@@ -82,8 +82,13 @@ code-block-bg: dark
 
 -   Can be used to search for specifc AS-PATHs in table - for example: `show ip bgp regexp ^$`
 -   Above will show prefixes originated locally with the AS. Cheat sheet [here.](http://gponsolution.com/bgp-regular-expressions-cheat-sheet.html)
--   Can be used to filter with ACLs with ip as-path: `ip as-path access-list 1 permit _54$`
+-   Originated in AS 100: `_100$`, Learned from AS 100: `^100_`
+-   Can be used to filter with ACLs with IP as-path: `ip as-path access-list 1 permit _54$`
 -   Then use `match as-path` under a route-map to apply modifications
+-   TIP: Summarise Address without using aggregate-adresss
+    -   Create static route for the summarised address with destination Null0
+
+    -   Redistribute Static under the BGP precess.
 
 ------------------------------------------------------------------------
 
