--- a/redistribution.qmd
+++ b/redistribution.qmd
@@ -9,6 +9,7 @@ code-block-bg: dark
 -   Configured under Destination Protocol, specifying source protocol.
 -   Redistribution is **NOT** transitive on a single router.
     -   R1 redistributes protocol 1 into protocol 2 and protocol 2 into protocol 3 - p3 won't receive P1's routes.
+-   Redistribution between EIGRP to EIGRP or OSPF to OSPF preserves the path metrics
 -   Sequential Protocol Redistribution is possible
     -   Redistribution over multiple protocols using multiple routers.
 -   Routes must exist in RIB
@@ -17,6 +18,7 @@ code-block-bg: dark
     -   OSPF = 20 (1 for BGP)
     -   BGP = Uses IGP metric
 -   `redistribute {connected | static | eigrp AS number | OSPF Process ID  [match {internal | external [1|2] } ] | BGP AS-number} [destination-protcol-options] [route-map RM NAME]`
+-   Intor OSPF = `subnets` allows classless networks to be redistributes
 
 ------------------------------------------------------------------------
 
@@ -45,6 +47,14 @@ router eigrp EIGRP-NAMED
   redistribute bgp 65100 metric 1000000 1 255 1 1500
  exit-af-topology
  network 10.23.1.0 0.0.0.255
+
+!!! With Route Map Setting Metric !!!
+router eigrp 100
+ network 10.23.1.0 0.0.0.255
+ redistribute ospf 1 route-map OSPF-2-EIGRP
+ 
+route-map OSPF-2-EIGRP permit 10
+ set metric 1000000 1 255 1 1500
 ```
 
 ### OSPF 
